# snapbase

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-java.sh  build-linux.sh  build-macos.sh  build-windows.bat  build.rs  update-version.sh
.cargo/: config.toml
.github/workflows/: release.yml
cli/: .env.sample  .gitignore  Cargo.toml  README.md  snapbase.toml.sample
cli/src/: cli.rs  commands.rs  main.rs  output.rs  progress.rs
core/: .gitignore  Cargo.toml  build.rs
core/.snapbase/sources/core/tests/fixtures/data/employees.xlsx/snapshot_name=excel_test/snapshot_timestamp=20250722T191054.363696Z/: data.parquet
core/src/: change_detection.rs  config.rs  data.rs  database.rs  duckdb_config.rs  error.rs  export.rs  hash.rs  lib.rs  naming.rs  path_resolver.rs  path_utils.rs  query_engine.rs  resolver.rs  snapshot.rs  sql.rs  test_fixtures.rs  workspace.rs
core/src/query/: mod.rs
core/src/storage/: local.rs  mod.rs  s3.rs
core/tests/: cli_workflow_test.rs  cli_workspace_test.rs  export_test.rs  flag_columns_test.rs  full_workflow_test.rs  integration_test.rs  rollback_test.rs
core/tests/common/: mod.rs
core/tests/fixtures/: README.md
core/tests/fixtures/configs/: cli_test.toml  local_custom.toml  temp_local.toml
core/tests/fixtures/data/: employees.csv  employees.xlsx  employees_snapshot1.csv  employees_snapshot2.csv  employees_updated.csv  products.json  sales.csv  simple.csv  simple.xlsx
demos/data_quality_dashboard/: .gitignore  README.md  data_quality_demo.py  pyproject.toml
demos/java/compliance_audit_system/: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml  run-dashboard.sh  run-demo.sh
demos/java/compliance_audit_system/src/main/java/com/snapbase/demos/compliance/: AuditLogger.java  ComplianceAuditDemo.java  ComplianceDashboardApplication.java  ComplianceDashboardController.java  CustomerRecord.java
demos/java/compliance_audit_system/src/main/resources/templates/: audit.html  changes.html  dashboard.html  layout.html  query.html  snapshots.html
demos/python/data_quality_dashboard/: .gitignore  README.md  data_quality_demo.py  pyproject.toml
java/: .gitignore  README.md  dependency-reduced-pom.xml  pom.xml
java-bindings/: Cargo.toml
java-bindings/src/: lib.rs
java/src/main/java/com/snapbase/: CellChange.java  ChangeDetectionResult.java  ColumnAddition.java  ColumnOrderChange.java  ColumnRemoval.java  ColumnRename.java  RowAddition.java  RowChanges.java  RowModification.java  RowRemoval.java  SchemaChanges.java  SnapbaseException.java  SnapbaseWorkspace.java  TabdiffWorkspace.java  TypeChange.java
java/src/test/java/com/snapbase/: ConfigContextTest.java  SnapshotValidationTest.java  TabdiffWorkspaceTest.java  TestUtils.java  WorkflowTest.java  WorkspacePathTest.java
python/: .gitignore  Cargo.toml  README.md  pyproject.toml  pytest.ini  snapbase.toml.sample
python/src/: lib.rs
python/src/snapbase/: __init__.py
python/tests/: README.md  __init__.py  conftest.py  test_basic.py  test_config_context.py  test_config_context_deep.py  test_integration.py  test_large_results.py  test_main.py  test_performance_demo.py  test_polars_integration.py  test_workflow.py  test_workspace.py  test_workspace_paths.py
