[workspace]
members = ["core", "cli", "java-bindings"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/peter-fm/snapbase"

[workspace.dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Data processing
duckdb = "1.3"
parquet = "55.0"

# Arrow ecosystem for zero-copy data transfer
arrow = "55.2"
arrow-array = "55.2"
arrow-schema = "55.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indexmap = { version = "2.0", features = ["serde"] }

# Hashing
blake3 = "1.5"

# Large integer handling
num-bigint = "0.4"
num-traits = "0.2"

# Parallel processing
rayon = "1.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.8"

# Regular expressions
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress reporting
indicatif = "0.17"

# File system utilities
walkdir = "2.4"
dirs = "5.0"
whoami = "1.4"

# Environment variable loading
dotenv = "0.15"

# Temporary file handling
tempfile = "3.8"

# Cloud storage dependencies
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Python bindings
pyo3 = "0.21"
pyo3-build-config = "0.21"

# Java bindings
jni = "0.21"

# Test dependencies
criterion = "0.5"