[package]
name = "snapbase-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for snapbase - snapshot-based structured data diff tool"

[dependencies]
# Data processing
duckdb = { workspace = true }
parquet = { workspace = true }

# Arrow ecosystem for zero-copy data transfer
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
indexmap = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Large integer handling
num-bigint = { workspace = true }
num-traits = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Random number generation
rand = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Progress reporting
indicatif = { workspace = true }

# File system utilities
walkdir = { workspace = true }
dirs = { workspace = true }
whoami = { workspace = true }

# Environment variable loading
dotenv = { workspace = true }

# Temporary file handling
tempfile = { workspace = true }

# Cloud storage dependencies
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# Python bindings (optional)
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["bundled"]
bundled = ["duckdb/bundled"]
test-fixtures = []
python = ["pyo3"]