[package]
name = "snapbase-java"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Peter Fraser-Mackenzie <pete.fm@pm.me>"]
description = "Java bindings for snapbase-core"

[lib]
name = "snapbase_java"
crate-type = ["cdylib"]

[dependencies]
jni = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
arrow = { workspace = true }

# Local dependency to core library
snapbase-core = { path = "../core" }

[features]
default = ["jni"]
jni = []
bundled = ["snapbase-core/bundled"]