[project]
name = "data-quality-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "polars>=0.19.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "snapbase",
]

[tool.uv.sources]
snapbase = { path = "../../python" }
